t24-data-validator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: t24-data-validator-service
spec:
  ports:
  - nodePort: 31112
    port: 8082
    protocol: TCP
    targetPort: 8081
  selector:
    app: t24-data-validator-app
  type: NodePort
