t24-data-validator/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: t24-data-validator-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: t24-validator-service.info
    http:
      paths:
      - backend:
          service:
            name: t24-data-validator-service
            port:
              number: 8082
        path: /
        pathType: Prefix
